s/xmms\.se/xmms2.org/
Levitation import of page 1327 rev 11330.

--- a/10-Template/Playlist Collections Discussion.mediawiki
+++ b/10-Template/Playlist Collections Discussion.mediawiki
@@ -1,7 +1,7 @@
-# [http://exodus.xmms.se/~andersg/playlists-and-stuff.txt How I Learned to Stop Worrying and Love Collections]
-# [http://exodus.xmms.se/~theefer/reply-anders-collections.txt Continued Thoughts on Collections]
-# [http://exodus.xmms.se/~andersg/playlists-and-stuff-reply-reply.txt Reply to 'Continued Thoughts on Collections']
-# [http://exodus.xmms.se/~theefer/second-reply-anders-collections.txt Reply to "Reply to 'Continued Thoughts on Collections'"]
-# [http://exodus.xmms.se/~andersg/playlists-and-stuff-reply-reply-reply-reply.txt Reply to "Reply to 'Reply to 'Continued Thoughts on Collections''"]
-# [http://exodus.xmms.se/~theefer/third-reply-anders-collections.txt Reply to Â« Reply to "Reply to 'Reply to 'Continued Thoughts on Collections''" Â»]
-# [http://exodus.xmms.se/~andersg/playlists-and-stuff-reply-reply-reply-reply-reply-reply.txt Subsequent Reply]
+# [http://people.xmms2.org/~andersg/playlists-and-stuff.txt How I Learned to Stop Worrying and Love Collections]
+# [http://people.xmms2.org/~theefer/reply-anders-collections.txt Continued Thoughts on Collections]
+# [http://people.xmms2.org/~andersg/playlists-and-stuff-reply-reply.txt Reply to 'Continued Thoughts on Collections']
+# [http://people.xmms2.org/~theefer/second-reply-anders-collections.txt Reply to "Reply to 'Continued Thoughts on Collections'"]
+# [http://people.xmms2.org/~andersg/playlists-and-stuff-reply-reply-reply-reply.txt Reply to "Reply to 'Reply to 'Continued Thoughts on Collections''"]
+# [http://people.xmms2.org/~theefer/third-reply-anders-collections.txt Reply to Â« Reply to "Reply to 'Reply to 'Continued Thoughts on Collections''" Â»]
+# [http://people.xmms2.org/~andersg/playlists-and-stuff-reply-reply-reply-reply-reply-reply.txt Subsequent Reply]
