with Google Code shutting down, I moved the code to GitHub – updated the homepage link
Levitation import of page 2515 rev 11338.

--- a/0-/Client:xmms2-cdinfo.mediawiki
+++ b/0-/Client:xmms2-cdinfo.mediawiki
@@ -1,8 +1,8 @@
 {{
 Client
 |name=xmms2-cdinfo
-|author=Tomasz Sobczyk
-|website=[http://code.google.com/p/xmms2-cdinfo/]
+|author=Kagomeko
+|website=[http://github.com/kagomeko/xmms2-cdinfo/]
 |devlanguage=C++
 |ui=Console
 }}
