--- a/0-/Release:DrO o.mediawiki
+++ b/0-/Release:DrO o.mediawiki
@@ -13,7 +13,6 @@ Adam Nielsen, Anders Waldenborg, Anthony Garcia, Benjamin Drung, Benjamin Schmit
 Upgrading should be smooth.
 
 === Noteworthy changes ===
-* Old deprecated xmms2 client removed, nyxmms2 renamed to xmms2
 * Waf build system updated to version 1.6, which brings Python 3.x compatibility to the build system.
 * Python bindings migrated to cython which brings Python 3.x compatibility to Python clients.
 * Server side IPC code is now generated, thus a whole lot more consistent and less prone to errors.
@@ -24,7 +23,7 @@ Upgrading should be smooth.
 
 ==== For users ====
 
-The old CLI has been replaced with the new CLI, enjoy. Please see [[MigrateToNyCLI]] for more information about the new CLI.
+The old CLI has been replaced with the new CLI, enjoy (nyxmms2 now called just xmms2). Please see [[MigrateToNyCLI]] for more information about the new CLI.
 
 ==== Bug fixes ====
 
