Fix name of language.
Levitation import of page 2317 rev 11355 (minor).

--- a/0-/Client:gntxmms2.mediawiki
+++ b/0-/Client:gntxmms2.mediawiki
@@ -1,1 +1,1 @@
-{{Client| name=gntxmms2| author=[[Sadrul Habib Chowdhury]]| website=http://code.google.com/p/python-gnt/wiki/XMMS2 | version=[unreleased]| devlanguage=python| ui=Console| screenshots=[http://code.google.com/p/python-gnt/wiki/XMMS2] | description=gntxmms2 is a windowed console clients based on the python bindings of xmms2 and libgnt. gntxmms2 is developed by [[Sadrul Habib Chowdhury]] and its development tree is hosted [http://repo.or.cz/w/python-gnt.git here].}}
+{{Client| name=gntxmms2| author=[[Sadrul Habib Chowdhury]]| website=http://code.google.com/p/python-gnt/wiki/XMMS2 | version=[unreleased]| devlanguage=Python| ui=Console| screenshots=[http://code.google.com/p/python-gnt/wiki/XMMS2] | description=gntxmms2 is a windowed console clients based on the python bindings of xmms2 and libgnt. gntxmms2 is developed by [[Sadrul Habib Chowdhury]] and its development tree is hosted [http://repo.or.cz/w/python-gnt.git here].}}
