--- a/0-/Client:JukX.mediawiki
+++ b/0-/Client:JukX.mediawiki
@@ -4,7 +4,7 @@
 |website=http://jukx.sourceforge.net/
 |version=0.4a
 |devlanguage=Python
-|ui=Gtk 2
+|ui=GTK2
 |screenshots=[http://sourceforge.net/project/screenshots.php?group_id=209142:1]
 |description=Simple client designated for touchscreen usage. Sound selection via album cover in an old fashioned way.
 }}
