Indent {{client}} template usage.
Levitation import of page 2041 rev 11383 (minor).

--- a/0-/Client:Harald.mediawiki
+++ b/0-/Client:Harald.mediawiki
@@ -1,2 +1,11 @@
-{{Client| name=Harald| author=[[Daniel Svensson]]| website=N/A| version=Unreleased| devlanguage=JavaME/C| ui=MIDP 2.0| screenshots=[http://people.xmms2.org/~nano/harald-060706.jpg]| description=This client is aimed to improve the comfort of all the chillaxed people who get stuck all day long in their sofas listening to the most awesome music ever made without moving an inch.
-It requires a device capable of JavaME MIDP 2.0, CLDC 1.1 and Bluetooth API (JSR-82)}}
+{{Client
+|name=Harald
+|author=[[Daniel Svensson]]
+|website=N/A
+|version=Unreleased
+|devlanguage=JavaME/C
+|ui=MIDP 2.0
+|screenshots=[http://people.xmms2.org/~nano/harald-060706.jpg]
+|description=This client is aimed to improve the comfort of all the chillaxed people who get stuck all day long in their sofas listening to the most awesome music ever made without moving an inch.
+It requires a device capable of JavaME MIDP 2.0, CLDC 1.1 and Bluetooth API (JSR-82)
+}}
