Indent {{client}} template usage.
Levitation import of page 1196 rev 11393 (minor).

--- a/0-/Client:Shhh.mediawiki
+++ b/0-/Client:Shhh.mediawiki
@@ -1,1 +1,10 @@
-{{Client| name=Shhh| author=[[Banlu Kemiyatorn]]| website=http://home.gna.org/garma/shhh/| version=N/A| devlanguage=Unknown (C?)| ui=GNUStep| screenshots=See homepage| description=A GNUstep client called Shhh is being developed by Banlu Kemiyatorn.}}
+{{Client
+|name=Shhh
+|author=[[Banlu Kemiyatorn]]
+|website=http://home.gna.org/garma/shhh/
+|version=N/A
+|devlanguage=Unknown (C?)
+|ui=GNUStep
+|screenshots=See homepage
+|description=A GNUstep client called Shhh is being developed by Banlu Kemiyatorn.
+}}
