Fix GNUstep name.
Levitation import of page 1196 rev 11394 (minor).

--- a/0-/Client:Shhh.mediawiki
+++ b/0-/Client:Shhh.mediawiki
@@ -4,7 +4,7 @@
 |website=http://home.gna.org/garma/shhh/
 |version=N/A
 |devlanguage=Unknown (C?)
-|ui=GNUStep
+|ui=GNUstep
 |screenshots=See homepage
 |description=A GNUstep client called Shhh is being developed by Banlu Kemiyatorn.
 }}
